Regression: Crash on opening the file containing weights #100863

Closed
opened 2022-09-06 23:01:36 +02:00 by Everton Schneider · 14 comments

System Information
Operating system: Linux-5.15.0-47-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-06 20:02, hash: 043f59cb3b
Worked: Release 3.2.2, 3.3
Caused by 05952aa94d

Short description of error
After bind a mesh to an armature something very wrong happens... If you save the file and close it, it won't open again, not even in release 3.2.2 where the error does not happen. I suspect that it's corrupting files. I lost two character rigs today, the files are not opening in any blender version...

Exact steps for others to reproduce the error
Open the attached file;
Use CTRL + P/With Automatic Weights;
Save another version of the file;
Close and try to open again;
The blender will close with "Segmentation fault (core dumped)" message.

Segmentation_Fault.blend

**System Information** Operating system: Linux-5.15.0-47-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-06 20:02, hash: `043f59cb3b` Worked: Release 3.2.2, 3.3 Caused by 05952aa94d **Short description of error** After bind a mesh to an armature something very wrong happens... If you save the file and close it, it won't open again, not even in release 3.2.2 where the error does not happen. I suspect that it's corrupting files. I lost two character rigs today, the files are not opening in any blender version... **Exact steps for others to reproduce the error** Open the attached file; Use CTRL + P/With Automatic Weights; Save another version of the file; Close and try to open again; The blender will close with "Segmentation fault (core dumped)" message. [Segmentation_Fault.blend](https://archive.blender.org/developer/F13463475/Segmentation_Fault.blend)

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

#100868 was marked as duplicate of this issue

#100868 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Segmentation fault (core dumped) to Regression: Crash on opening the file containing weights 2022-09-07 05:35:42 +02:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Crashes since 05952aa94d
cc @HooglyBoogly

Crashes since 05952aa94d cc @HooglyBoogly

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Hans Goudey self-assigned this 2022-09-07 14:10:28 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Seems to be same root issue as #100875

Seems to be same root issue as #100875

Added subscriber: @MaskedApe

Added subscriber: @MaskedApe

Added subscriber: @josias.souza

Added subscriber: @josias.souza

This issue was referenced by 0a32f6b76a

This issue was referenced by 0a32f6b76a63dce674cbee5b402f7054354e8f59
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100863
No description provided.